  * implement time seeking on DVD plugin (*** remind: dvdnav might need a sync ***)
  * move CFLAGS optimizations to a separated file (added --disable-optimizations)
  * use the same codec path as MPlayer (/usr[/local]/lib/codecs)
  * FFmpeg sync (new QDM2 decoder)
  * imported Duck TrueMotion 2 decoder from FFmpeg
  * sync libfaad2 to newer version; fixes AAC decoding on x86_64 arch

xine-lib (1.1.0)
  * new quality deinterlacer from dscaler: GreedyH (Greedy High Motion)
  * new quality deinterlacer from dscaler: TomsMoComp (Tom's Motion Compensated)
  * added help for most deinterlace methods
  * ffmpeg update
  * use ImageMagick to convert and display different type of images (png, jpg...)
  * improve ASX playlist parsing
  * add an extended MRL reference event (MRL title, start time, play time):
    needed for the ASX parser; deprecates plain MRL reference events.
  * goom updated to 2k4-0
              
xine-lib (1.0.2)
  * fixed playback of single-session Real RTSP streams, such as
    rtsp://stream.samurai.fm/broadcast/live_hi.rm
  * fixed xxmc / xvmc mocomp / IDCT rendering errors caused by the big update. 
  * support --enable-fpic with recent versions of gcc
  * clip goom fps value to >= 1 [bug #1193783]
  * fixed xvmc plugin segfault when it tried software blending on nonexistant xv image
  * cleaned up libmpeg2 behaviour on xxmc plugin abrupt software fallback
  * use -fno-inline-functions with gcc < 3.4.0 (bug known to be in 3.3.5)
  * fix xxmc plugin wanting to change vld xvmc context when stream changes from
    non-interlaced to interlaced [bug #1194350]
  * speed up xx44 alphablending of large transparent areas
  * stop libmpeg2 XvMC IDCT / MOCOMP attempting software motion compensation
    [bug #1194754]
  * improve xxmc cpu-usage for IDCT / MOCOMP acceleration through better locking
    [bug #1195282]
  * gcc4 build patches [bug #1175002]
  * don't assume that file is in /usr/bin (build fix) [bug #1195539]