@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
- * $Id: xine.h.in,v 1.145 2005/10/07 20:09:12 mroi Exp $
+ * $Id: xine.h.in,v 1.146 2005/10/30 02:18:35 miguelfreitas Exp $
  *
  * public xine-lib (libxine) interface and documentation
  *
@@ -338,6 +338,8 @@ int  xine_get_param (xine_stream_t *stream, int param);
 #define XINE_PARAM_AUDIO_CLOSE_DEVICE     28 /* force closing audio device  */
 #define XINE_PARAM_AUDIO_AMP_MUTE         29 /* 1=>mute, 0=>unmute */
 #define XINE_PARAM_FINE_SPEED             30 /* 1.000.000 => normal speed   */ 
+#define XINE_PARAM_EARLY_FINISHED_EVENT   31 /* send event when demux finish*/
+#define XINE_PARAM_GAPLESS_SWITCH         32 /* next stream only gapless swi*/ 
 
 /*
  * speed values for XINE_PARAM_SPEED parameter.
